# STSalike

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UML_GAME.drawio
src/: main.cpp
src/core/: Input.h  Player.cpp  Player.h  User.cpp  User.h  Window.cpp  Window.h  WindowContent.h  requirement.h
src/game/context/: Game.cpp  Game.h  GameWindowContent.cpp  GameWindowContent.h
src/game/menu/: MenuWindowContent.cpp  MenuWindowContent.h
src/online/: Client.cpp  Client.h  ClientSocket.cpp  ClientSocket.h  OSMultiplayerDependencies.h  Server.cpp  Server.h
src/util/: ConcurrentRunnerBase.h  FrameRate.cpp  FrameRate.h  OSCommandDependencies.h  Pair.cpp  Pair.h
